fix index overflow

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body{ margin:0 auto;
 .footer_6 h1 img{ width: 110px; height: 110px}
 .footer_6 h2{ font-size: 12px; text-align: center; color: #fff; line-height:30px;}
 .Box {position: relative;margin-top: 40px;}
-.Box .content {width: 1200px;}
+/* .Box .content {width: 1200px;} */
 .Box .Box_con {position: relative;}
 .Box .Box_con .btnl {position: absolute;}
 .Box .Box_con .btn {display: block;width: 41px;height: 41px;position: absolute;top: 80px;cursor: pointer;}
